Small fix in tooltip z-index
git-svn-id: file:///home/gallir/meneame/svn/src@2945 cbe1a1ec-7179-4919-8e32-4551e8279a00

--- a/branches/version4/www/css/es/mnm.css
+++ b/branches/version4/www/css/es/mnm.css
@@ -1836,7 +1836,7 @@ text-align: left;
 position:absolute;
 display:none;
 margin: 0;
-z-index:5;
+z-index:15;
 border: 1px solid;
 padding: 10px;
 font-size: 95%;
